force-app/main/default/objects/Outside_Grant__c/Outside_Grant__c.object-meta.xml
<CustomObject>
    <label>Outside Grant</label>
    <nameField>
        <label>Outside Grant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outside Grants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>