force-app/main/default/objects/Outside_Grant__c/fields/Date_Final_Report__c.field-meta.xml
<CustomField>
    <fullName>Date_Final_Report__c</fullName>
    <label>Date Final Report</label>
    <type>Date</type>
</CustomField>