force-app/main/default/objects/Outside_Grant__c/fields/Date_Funds_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Funds_Received__c</fullName>
    <label>Date Funds Received</label>
    <type>Date</type>
</CustomField>