force-app/main/default/objects/Outside_Grant__c/fields/Date_Funds_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Funds_Sent__c</fullName>
    <label>Date Funds Sent</label>
    <type>Date</type>
</CustomField>