force-app/main/default/objects/Outside_Grant__c/fields/Date_Grant_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Date_Grant_Agreement__c</fullName>
    <label>Date of Grant Agreement</label>
    <type>Date</type>
</CustomField>