force-app/main/default/objects/Outside_Grant__c/fields/Date_Materials_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Materials_Received__c</fullName>
    <label>Date Marterials Received</label>
    <type>Date</type>
</CustomField>