force-app/main/default/objects/Outside_Grant__c/fields/Fiscal_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Sponsorship__c</fullName>
    <label>Fiscal Sponsorship</label>
    <referenceTo>Fiscal_Sponsorship__c</referenceTo>
    <relationshipLabel>Outside Grants</relationshipLabel>
    <relationshipName>Outside_Grants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>