force-app/main/default/objects/Outside_Grant__c/fields/Fiscal_Sponsorship_Annual_Report__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Sponsorship_Annual_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fiscal Sponsorship Annual Report</label>
    <referenceTo>Fiscal_Sponsorship_Annual_Report__c</referenceTo>
    <relationshipLabel>Outside Grants</relationshipLabel>
    <relationshipName>Outside_Grants</relationshipName>
    <type>Lookup</type>
</CustomField>