force-app/main/default/objects/Outside_Grant__c/fields/Funds_Received__c.field-meta.xml
<CustomField>
    <fullName>Funds_Received__c</fullName>
    <label>Funds Received</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>