force-app/main/default/objects/Outside_Grant__c/fields/Grantee__c.field-meta.xml
<CustomField>
    <fullName>Grantee__c</fullName>
    <label>Grantee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>