force-app/main/default/objects/Outside_Grant__c/fields/Requested_Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Grant_Amount__c</fullName>
    <label>Requested Grant Amount</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>