force-app/main/default/objects/Outside_Grant__c/recordTypes/Artemis_Rising.recordType-meta.xml
<RecordType>
    <fullName>Artemis_Rising</fullName>
    <active>true</active>
    <label>Artemis Rising</label>
</RecordType>